Fix overflow of tabs

--- a/src/style.scss
+++ b/src/style.scss
@@ -46,6 +46,28 @@ html, body {
     justify-content: flex-start;
     border-bottom: 1px solid #454545;
     height: 2em;
+    overflow-x: auto;
+
+    & {
+        scrollbar-width: thin;
+        scrollbar-color: rgba(121, 121, 121, 0.4) transparent;
+    }
+    
+    /* Works on Chrome, Edge, and Safari */
+    &::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
+    }
+    
+    &::-webkit-scrollbar-track {
+        background: transparent;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        background-color: rgba(121, 121, 121, 0.4);
+        border-radius: 0px;
+        border: 3px solid transparent;
+    }
 }
 
 .tab {
